# Digital-Instruments

./: README.md  package-lock.json
digital_instruments_api/: Cargo.toml
digital_instruments_api/src/: instrument.rs  lib.rs
digital_instruments_frontend/: package-lock.json  package.json  tailwind.config.js
digital_instruments_frontend/config/: craco.config.js
digital_instruments_frontend/public/: drawchart.js  index.html  volumeChart.js  volumeGraph.js
digital_instruments_frontend/src/: App.js  FunctionGraph.js  Graph.js  Instrument.js  InstrumentCard.js  InstrumentCards.js  InstrumentLibrary.js  InstrumentMaker.js  VolumeGraph.js
